[responsive]: fixes for the plans page on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -2303,7 +2303,7 @@ span.footnote {
 .step_tracker2 ol li,
 .step_tracker3 ol li {
   float: left;
-  width: 25%;
+  width: 22%;
   border-top: 6px solid #d8d8d8;
 }
 
