--- a/sass/classes.scss
+++ b/sass/classes.scss
@@ -1290,7 +1290,7 @@ span.footnote {
 	ol {
 		li {
 			float: left;
-			width: 25%;
+			width: 22%;
 			border-top: 6px solid $gray;
 
 			&.done {
